[package]
name = "sound_themer"
version = "0.3.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["strum_macros", "derive"] }
symphonia = "0.5.5"
thiserror = "2.0.18"
toml = "1.0.3"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "play_sound_benchmark"
harness = false
